--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit":"lint-staged"
+  },
+  "lint-staged":{
+    "./**/*.js":[
+      "eslint -fix --ext .js",
+      "prettier --write",
+      "git commit"
+    ]
   },
   "repository": {
     "type": "git",
@@ -19,5 +27,12 @@
   "bugs": {
     "url": "https://github.com/sunshinefull/es6-design-patterns/issues"
   },
-  "homepage": "https://github.com/sunshinefull/es6-design-patterns#readme"
+  "homepage": "https://github.com/sunshinefull/es6-design-patterns#readme",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.4"
+  }
 }
