--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "precommit":"lint-staged"
+    "lint": "eslint **/*.js --fix --ext .js&&prettier --write"
   },
   "lint-staged":{
-    "./**/*.js":[
+    "**/*.js":[
       "eslint -fix --ext .js",
       "prettier --write",
       "git commit"
@@ -29,10 +29,11 @@
   },
   "homepage": "https://github.com/sunshinefull/es6-design-patterns#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
-    "prettier": "^2.0.4"
+    "prettier": "^1.14.0"
   }
 }
