--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint **/*.js --fix --ext .js&&prettier --write"
+    "lint": "eslint **/*.js --fix --ext .js"
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit":"npm run lint"
+    }
   },
   "lint-staged":{
     "**/*.js":[
