--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint **/*.js --fix --ext .js"
+    "lint": "eslint **/*.js --fix --ext .js",
+    "pretty": "prettier **/*.js --write",
+    "pretty-lint": "prettier **/*.js --write && eslint **/*.js --fix --ext .js"
   },
-  "husky":{
-    "hooks":{
-      "pre-commit":"npm run lint"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretty-lint"
     }
   },
-  "lint-staged":{
-    "**/*.js":[
-      "eslint -fix --ext .js",
+  "lint-staged": {
+    "**/*.js": [
       "prettier --write",
+      "eslint -fix --ext .js",
       "git commit"
     ]
   },
@@ -39,6 +41,8 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
-    "prettier": "^1.14.0"
+    "lint-staged": "^10.1.3",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.1"
   }
 }
